--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
