--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .App {
   text-align: center;
+  background-color: #1c77ac
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
+}
+
+
+.App-NavBar {
+  
 }
 
 .App-header {
