--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  background-color: #1c77ac
+  background-color: #262626
+  /* #1c77ac */
 }
 
 .App-logo {
@@ -22,7 +23,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #393f4d;
   height: 30%;
   display: flex;
   flex-direction: column;
